# html_to_text

./: .hgignore  README.md  html_to_text.py  pyproject.toml  setup.py
.github/workflows/: test.yml
scripts/: check_workstream_order.py
tests/: conftest.py  test_block_tags.py  test_callbacks.py  test_cli.py  test_corpus.py  test_debug_ci.py  test_edge_cases.py  test_headings.py  test_ignored_tags.py  test_images.py  test_integration.py  test_links.py  test_mathml.py  test_preformatted.py  test_properties.py  test_semantic_tags.py  test_special_tags.py  test_state_machine.py  test_tables.py  test_whitespace.py
