[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "html_to_text"
version = "0.11"
description = "Converts HTML to text"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "chardet>=5.2.0",
    "css-inline>=0.15.0",
    "lxml",
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "ruff>=0.13.2",
    "types-lxml>=2025.8.25",
]
