[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "html_to_text"
version = "0.12"
description = "Converts HTML to text"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "chardet>=5.2.0",
    "css-inline>=0.15.0",
    "lxml",
    "transitions>=0.9.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.13.2",
    "types-lxml>=2025.8.25",
]
