[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "html_to_text"
version = "0.13"
description = "Converts HTML to text"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["html", "text", "accessibility", "parser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "chardet>=5.2.0",
    "lxml",
    "transitions>=0.9.0",
]

[project.urls]
Repository = "https://github.com/accessibleapps/html_to_text"

[project.scripts]
html-to-text = "html_to_text:main"

[dependency-groups]
dev = [
    "hypothesis>=6.113.0",
    "pyright>=1.1.405",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.13.2",
    "types-lxml>=2025.8.25",
]
